tests/sksl/errors/golden/ArrayUnspecifiedDimensions.glsl
### Compilation failed:

error: 1: arrays without an explicit size must use an initializer expression
error: 2: array size must be specified
error: 3: array size must be specified
error: 4: array size must be specified
error: 5: array size must be specified
error: 6: array size must be specified
error: 7: array size must be specified
error: 8: array size must be specified
error: 9: array size must be specified
error: 10: array size must be specified
error: 11: array size must be specified
error: 12: expected 'int', but found 'float'
error: 13: expected 'int', but found 'bool'
error: 14: arrays without an explicit size must use an initializer expression
14 errors
